--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Brian Muthomi Mutwiri | Software Engineer & Portfolio</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:title" content="Brian Muthomi Mutwiri - Software Engineer & Portfolio" />
+    <meta property="og:description" content="Professional portfolio of Brian Muthomi Mutwiri, Software Engineer. Projects, skills, testimonials, and contact." />
+    <meta property="og:image" content="%PUBLIC_URL%/social-preview.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Brian Muthomi Mutwiri - Software Engineer & Portfolio" />
+    <meta name="twitter:description" content="Professional portfolio of Brian Muthomi Mutwiri, Software Engineer. Projects, skills, testimonials, and contact." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/social-preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
